# rumatrix

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example_configs/: clock.yaml  demo.yaml
src/: cli_parser.rs  colors.rs  config.rs  faller_adder.rs  falling_char.rs  lib.rs  main.rs  message.rs  position.rs  random_vec_bag.rs
