[package]
name = "rumatrix"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Czarny"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0"
rand = "0.8"
ctrlc = "3.2"
clap = { version = "4.0", features = ["derive"] }
derive-getters = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
paste = "1.0"
chrono = "0.4"
